fixed faulty desktop presets on mobile mixin for DE and NL

--- a/app/intermediary/config.scss
+++ b/app/intermediary/config.scss
@@ -187,7 +187,7 @@ $retina-large : "(min-width: 1441px) and (min-resolution: 192dpi)";
 
     .region-DE .#{$name} {
 
-      background-image: url('#{$urlDE}?#{$flush}&$desktop$');
+      background-image: url('#{$urlDE}?#{$flush}&$mobile$');
 
       @if $url == '' {
         @media #{$mobile} {
@@ -202,7 +202,7 @@ $retina-large : "(min-width: 1441px) and (min-resolution: 192dpi)";
 
     .region-NL .#{$name} {
 
-      background-image: url('#{$urlNL}?#{$flush}&$desktop$');
+      background-image: url('#{$urlNL}?#{$flush}&$mobile$');
 
       @if $url == '' {
         @media #{$mobile} {
